monitoring/ssl-exporter/1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssl-exporter
  template:
    metadata:
      labels:
        app: ssl-exporter
      name: ssl-exporter
    spec:
      containers:
      - image: ribbybibby/ssl-exporter:latest
        imagePullPolicy: IfNotPresent
        name: ssl-exporter
        ports:
        - containerPort: 9219
          name: tcp
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/ssl/certs
          name: ssl-certs
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: ssl-certs
