monitoring/ssl-exporter/2.service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ssl-exporter
  name: ssl-exporter
  namespace: monitoring
spec:
  ports:
  - name: ssl-exporter
    port: 9219
    protocol: TCP
    targetPort: 9219
  selector:
    app: ssl-exporter
  type: ClusterIP
