monitoring/ssl-exporter/2.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ssl-exporter
  name: ssl-exporter
  namespace: monitoring
spec:
  ports:
  - name: ssl-exporter
    port: 9219
    protocol: TCP
    targetPort: 9219
  selector:
    app: ssl-exporter
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-exporter
  namespace: monitoring
  labels:
    app: ssl-exporter
spec:
  ingressClassName: nginx
  rules:
  - host: ssl.github.icu
    http:
      paths:
      - backend:
          service:
            name: ssl-exporter
            port:
              number: 9219
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ssl.github.icu
    secretName: github-tls
