monitoring/ssl-exporter/3.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-exporter
  namespace: monitoring
  labels:
    app: ssl-exporter
spec:
  ingressClassName: nginx
  rules:
  - host: ssl.github.icu
    http:
      paths:
      - backend:
          service:
            name: ssl-exporter
            port:
              number: 9219
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ssl.github.icu
    secretName: github-tls
